samples/_failures_safe/1761427528_841cb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35dc6482.c: In function ‘main’:
./samples/SAFE/__tmp_35dc6482.c:156:12: error: missing terminating " character
  156 |     printf("\n=== SUMMARY STATISTICS ===\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_35dc6482.c:156:5: error: expected expression at end of input
  156 |     printf("\n=== SUMMARY STATISTICS ===\n
      |     ^~~~~~
./samples/SAFE/__tmp_35dc6482.c:156:5: error: expected declaration or statement at end of input
